src/test/ui/lowering/literals.stderr
error: cannot concatenate an invalid literal
  --> $DIR/literals.rs:30:9
   |
LL |         "abc"suffix,
   |         ^^^^^^^^^^^

error: cannot concatenate an invalid literal
  --> $DIR/literals.rs:31:9
   |
LL |         "blah"foo,
   |         ^^^^^^^^^

error: cannot concatenate an invalid literal
  --> $DIR/literals.rs:32:9
   |
LL |         3u33,
   |         ^^^^

error: cannot concatenate invalid literals
  --> $DIR/literals.rs:35:27
   |
LL |     let x = concat_bytes!("foo"blah, 3u33);
   |                           ^^^^^^^^^

error: suffixed literals are not allowed in attributes
  --> $DIR/literals.rs:13:14
   |
LL | #[repr(align(4u7))]
   |              ^^^
   |
   = help: instead of using a suffixed literal (`1u8`, `1.0f32`, etc.), use an unsuffixed version (`1`, `1.0`, etc.)

error: suffixed literals are not allowed in attributes
  --> $DIR/literals.rs:19:9
   |
LL | #[doc = "documentation"suffix]
   |         ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: instead of using a suffixed literal (`1u8`, `1.0f32`, etc.), use an unsuffixed version (`1`, `1.0`, etc.)

error: suffixed literals are not allowed in attributes
  --> $DIR/literals.rs:23:15
   |
LL | #[doc(alias = 0u7)]
   |               ^^^
   |
   = help: instead of using a suffixed literal (`1u8`, `1.0f32`, etc.), use an unsuffixed version (`1`, `1.0`, etc.)

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/literals.rs:8:8
   |
LL | #[repr(align(340282366920938463463374607431768211456))]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/literals.rs:13:8
   |
LL | #[repr(align(4u7))]
   |        ^^^^^^^^^^

error: doc alias attribute expects a string `#[doc(alias = "a")]` or a list of strings `#[doc(alias("a", "b"))]`
  --> $DIR/literals.rs:23:7
   |
LL | #[doc(alias = 0u7)]
   |       ^^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/literals.rs:8:8
   |
LL | #[repr(align(340282366920938463463374607431768211456))]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/literals.rs:13:8
   |
LL | #[repr(align(4u7))]
   |        ^^^^^^^^^^

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0589`.
